// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`correctly applies the theme context className 1`] = `
<ThemeContextProvider
  theme={
    Object {
      "className": "orion-fusion-theme",
    }
  }
>
  <_default>
    <section
      className="demographics-banner orion-fusion-theme"
    >
      <h1
        className="person-name"
      >
        <span />
      </h1>
      <div
        className="person-details"
      >
        <DemographicsBannerValue
          key="age"
        >
          <span
            className="value"
          >
            <span
              className="value-text"
            />
          </span>
        </DemographicsBannerValue>
        <DemographicsBannerValue
          key="gender"
        >
          <span
            className="value"
          >
            <span
              className="value-text"
            />
          </span>
        </DemographicsBannerValue>
        <DemographicsBannerValue
          key="dob"
        >
          <span
            className="value"
          >
            <span
              className="value-text"
            />
          </span>
        </DemographicsBannerValue>
      </div>
      <div
        className="application-content"
      />
    </section>
  </_default>
</ThemeContextProvider>
`;

exports[`renders small banner that contains all valid information 1`] = `
<section
  className="demographics-banner"
>
  <div
    className="row"
  >
    <h1
      className="person-name"
    >
      <span>
        Johnathon Doe
        <span
          className="preferred-first-name"
        >
          John
        </span>
      </span>
    </h1>
  </div>
  <div
    className="person-details"
  >
    <DemographicsBannerValue
      key="age"
      value="25 Years"
    />
    <DemographicsBannerValue
      key="gender"
      value="Male"
    />
    <DemographicsBannerValue
      key="dob"
      label="DOB"
      value="May 9, 1993"
    />
    <DemographicsBannerValue
      key="identifier-MRN"
      label="MRN"
      value={12343}
    />
    <DemographicsBannerValue
      key="identifier-REA"
      label="REA"
      value="3JSDA"
    />
  </div>
  <div
    className="application-content"
  >
    <span
      className="risk-score"
    >
      5%
    </span>
  </div>
</section>
`;
